force-app/main/default/objects/JMS_Direct_Shipment__c/JMS_Direct_Shipment__c.object-meta.xml
<CustomObject>
    <label>Direct Shipment</label>
    <nameField>
        <displayFormat>DS-{0000}</displayFormat>
        <label>Direct Shipment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Direct Shipments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>