force-app/main/default/objects/JMS_Direct_Shipment__c/fields/JMS_Actual_List_Amount__c.field-meta.xml
<CustomField>
    <fullName>JMS_Actual_List_Amount__c</fullName>
    <label>Actual List Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>