force-app/main/default/objects/JMS_Direct_Shipment__c/fields/JMS_Broker_Code__c.field-meta.xml
<CustomField>
    <fullName>JMS_Broker_Code__c</fullName>
    <label>Broker Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>