force-app/main/default/objects/JMS_Direct_Shipment__c/fields/JMS_External_Id__c.field-meta.xml
<CustomField>
    <fullName>JMS_External_Id__c</fullName>
    <description>External ID</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>