force-app/main/default/objects/JMS_Direct_Shipment__c/fields/JMS_Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>JMS_Fiscal_Year__c</fullName>
    <label>Fiscal Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>