force-app/main/default/objects/JMS_Direct_Shipment__c/fields/JMS_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>JMS_Invoice_Date__c</fullName>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>