force-app/main/default/objects/JMS_Direct_Shipment__c/fields/JMS_Order_Item_Name__c.field-meta.xml
<CustomField>
    <fullName>JMS_Order_Item_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Item Name</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Direct Shipments</relationshipLabel>
    <relationshipName>Direct_Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>