force-app/main/default/objects/JMS_Direct_Shipment__c/fields/JMS_Order_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>JMS_Order_Item_Number__c</fullName>
    <label>Order Item Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>