force-app/main/default/objects/JMS_Direct_Shipment__c/fields/JMS_Plan_To__c.field-meta.xml
<CustomField>
    <fullName>JMS_Plan_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Direct Shipments</relationshipLabel>
    <relationshipName>Direct_Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>