force-app/main/default/objects/JMS_Direct_Shipment__c/fields/JMS_Plan_To_Name__c.field-meta.xml
<CustomField>
    <fullName>JMS_Plan_To_Name__c</fullName>
    <label>Plan To Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>