force-app/main/default/objects/JMS_Direct_Shipment__c/fields/JMS_Sales_Invoice_EU__c.field-meta.xml
<CustomField>
    <fullName>JMS_Sales_Invoice_EU__c</fullName>
    <label>Sales Invoice EU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>