force-app/main/default/objects/JMS_Direct_Shipment__c/fields/JMS_Spin_Order_Flag__c.field-meta.xml
<CustomField>
    <fullName>JMS_Spin_Order_Flag__c</fullName>
    <label>Spin Order Flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>