force-app/main/default/objects/JMS_Direct_Shipment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>JMS_Plan_To__c</columns>
    <columns>JMS_Order_Item_Name__c</columns>
    <columns>JMS_Sales_Invoice_Quantity__c</columns>
    <columns>JMS_Invoice_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>